Adicionando métodos de DELETE e PUT na API
